// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataloader generates expected schema 1`] = `
"interface Animal {
  type: String!
}

type BaseError implements Error {
  message: String!
}

type CallCount {
  calls: Int!
  loaded: Int!
  name: String!
}

type Cat implements Animal {
  chasingMouse: Boolean!
  type: String!
}

type ClassLoadableThing implements Node & TestInterface {
  id: ID!
  idFromInterface: ID!
}

type Dog implements Animal {
  chasingTail: Boolean!
  type: String!
}

interface Error {
  message: String!
}

interface Node {
  id: ID!
}

type NullableUser implements TestInterface {
  id: ID!
  idFromInterface: ID!
}

union Pet = Cat | Dog

type Post {
  content: String!
  id: ID!
  title: String!
}

type PreloadedUser implements TestInterface {
  id: ID!
  idFromInterface: ID!
}

type PreloadedUserToKey implements TestInterface {
  id: ID!
  idFromInterface: ID!
}

type Query {
  addOnUser: User!
  animals(ids: [ID!]!): [Animal!]!
  classThing: ClassLoadableThing!
  classThingRef: ClassLoadableThing!
  counts: [CallCount!]!
  fromContext1: User!
  fromContext2: User!
  fromContext3: User!
  fromContext4: [User!]!
  fromContext5: [User!]!
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]!
  nullableUser(id: String): NullableUser
  nullableUsers(ids: [String!]): [NullableUser]
  pets(ids: [ID!]!): [Pet!]!
  post(id: Int!): Post
  postSorted(id: Int!): Post
  posts(ids: [Int!]!): [Post]
  postsSorted(ids: [Int!]!): [Post]
  preloadedUser(id: String): PreloadedUser
  preloadedUserToKey(id: String): PreloadedUserToKey
  preloadedUsers(ids: [String!]): [PreloadedUser]
  preloadedUsersToKey(ids: [String!]): [PreloadedUserToKey]
  sortedUser(id: String): SortedUser
  sortedUserToKey(id: String): SortedUserToKey
  sortedUsers(ids: [String!]): [SortedUser]
  sortedUsersToKey(ids: [String!]): [SortedUserToKey]
  user(id: String): User
  userNode(id: String): UserNode
  userNodes(ids: [String!]): [UserNode]
  userWithErrors(id: String): QueryUserWithErrorsResult
  users(ids: [String!]): [User]
  usersWithErrors(ids: [String!]): QueryUsersWithErrorsResult
}

union QueryUserWithErrorsResult = BaseError | QueryUserWithErrorsSuccess

type QueryUserWithErrorsSuccess {
  data: User!
}

union QueryUsersWithErrorsResult = BaseError | QueryUsersWithErrorsSuccess

type QueryUsersWithErrorsSuccess {
  data: [User!]!
}

type SortedUser implements TestInterface {
  id: ID!
  idFromInterface: ID!
}

type SortedUserToKey implements TestInterface {
  id: ID!
  idFromInterface: ID!
}

interface TestInterface {
  idFromInterface: ID!
}

type User implements TestInterface {
  id: ID!
  idFromInterface: ID!
  self: User!
}

type UserNode implements Node & TestInterface {
  id: ID!
  idFromInterface: ID!
}"
`;

exports[`dataloader queries primes the dataloader 1`] = `
Object {
  "counts": Array [
    Object {
      "calls": 1,
      "loaded": 1,
      "name": "preloadedUsers",
    },
  ],
  "preloadedUsers": Array [
    Object {
      "id": "123",
    },
    Object {
      "id": "456",
    },
    Object {
      "id": "789",
    },
  ],
  "user1": Object {
    "id": "123",
  },
  "user2": Object {
    "id": "999",
  },
}
`;

exports[`dataloader queries primes the dataloader with toKey 1`] = `
Object {
  "counts": Array [
    Object {
      "calls": 1,
      "loaded": 1,
      "name": "preloadedUsersToKey",
    },
  ],
  "preloadedUsersToKey": Array [
    Object {
      "id": "123",
    },
    Object {
      "id": "456",
    },
    Object {
      "id": "789",
    },
  ],
  "user1": Object {
    "id": "123",
  },
  "user2": Object {
    "id": "999",
  },
}
`;

exports[`dataloader queries query with errors 1`] = `
Object {
  "counts": Array [
    Object {
      "calls": 1,
      "loaded": 4,
      "name": "users",
    },
    Object {
      "calls": 1,
      "loaded": 3,
      "name": "userNodes",
    },
    Object {
      "calls": 1,
      "loaded": 3,
      "name": "posts",
    },
    Object {
      "calls": 1,
      "loaded": 2,
      "name": "post",
    },
  ],
  "post": null,
  "post2": Object {
    "id": "2",
  },
  "posts": Array [
    null,
    null,
    Object {
      "content": "780 title",
      "id": "780",
      "title": "780 title",
    },
  ],
  "user": null,
  "user2": Object {
    "id": "2",
  },
  "userNode": null,
  "userNodes": Array [
    null,
    null,
    Object {
      "id": "VXNlck5vZGU6Nzg5",
    },
  ],
  "users": Array [
    null,
    null,
    Object {
      "id": "789",
    },
  ],
}
`;

exports[`dataloader queries sorts loaded results 1`] = `
Object {
  "counts": Array [
    Object {
      "calls": 1,
      "loaded": 2,
      "name": "sortedUsers",
    },
  ],
  "sortedUsers": Array [
    Object {
      "id": "123",
    },
    Object {
      "id": "456",
    },
    Object {
      "id": "789",
    },
  ],
  "user1": Object {
    "id": "123",
  },
  "user2": Object {
    "id": "999",
  },
}
`;

exports[`dataloader queries sorts loaded results with toKey 1`] = `
Object {
  "counts": Array [
    Object {
      "calls": 1,
      "loaded": 2,
      "name": "sortedUsersToKey",
    },
  ],
  "sortedUsersToKey": Array [
    Object {
      "id": "123",
    },
    Object {
      "id": "456",
    },
    Object {
      "id": "789",
    },
  ],
  "user1": Object {
    "id": "123",
  },
  "user2": Object {
    "id": "999",
  },
}
`;

exports[`dataloader queries valid queries 1`] = `
Object {
  "data": Object {
    "classThing": Object {
      "id": "Q2xhc3NMb2FkYWJsZVRoaW5nOjEyMw==",
    },
    "classThingRef": Object {
      "id": "Q2xhc3NMb2FkYWJsZVRoaW5nOjEyMw==",
    },
    "counts": Array [
      Object {
        "calls": 1,
        "loaded": 6,
        "name": "users",
      },
      Object {
        "calls": 1,
        "loaded": 4,
        "name": "userNodes",
      },
      Object {
        "calls": 1,
        "loaded": 4,
        "name": "nullableUsers",
      },
      Object {
        "calls": 1,
        "loaded": 3,
        "name": "posts",
      },
      Object {
        "calls": 1,
        "loaded": 2,
        "name": "post",
      },
      Object {
        "calls": 1,
        "loaded": 3,
        "name": "postsSorted",
      },
      Object {
        "calls": 1,
        "loaded": 2,
        "name": "postSorted",
      },
    ],
    "fromContext1": Object {
      "id": "123",
    },
    "fromContext2": Object {
      "id": "456",
    },
    "fromContext3": Object {
      "id": "789",
    },
    "fromContext4": Array [
      Object {
        "id": "123",
      },
      Object {
        "id": "456",
      },
    ],
    "nodes": Array [
      Object {
        "id": "VXNlck5vZGU6MTIz",
      },
      Object {
        "id": "VXNlck5vZGU6NDU2",
      },
    ],
    "nullableUser": null,
    "nullableUsers": Array [
      Object {
        "id": "123",
      },
      null,
      Object {
        "id": "789",
      },
    ],
    "post": Object {
      "id": "1",
    },
    "post2": Object {
      "id": "2",
    },
    "postSorted": Object {
      "id": "1",
    },
    "postSorted2": Object {
      "id": "2",
    },
    "posts": Array [
      Object {
        "content": "123 title",
        "id": "123",
        "title": "123 title",
      },
      Object {
        "content": "456 title",
        "id": "456",
        "title": "456 title",
      },
    ],
    "posts2": Array [
      Object {
        "content": "123 title",
        "id": "123",
        "title": "123 title",
      },
      Object {
        "content": "789 title",
        "id": "789",
        "title": "789 title",
      },
    ],
    "postsSorted": Array [
      Object {
        "content": "123 title",
        "id": "123",
        "title": "123 title",
      },
      Object {
        "content": "456 title",
        "id": "456",
        "title": "456 title",
      },
    ],
    "postsSorted2": Array [
      Object {
        "content": "123 title",
        "id": "123",
        "title": "123 title",
      },
      Object {
        "content": "789 title",
        "id": "789",
        "title": "789 title",
      },
    ],
    "user": Object {
      "id": "1",
      "idFromInterface": "1",
    },
    "user2": Object {
      "id": "2",
    },
    "userNode": Object {
      "id": "VXNlck5vZGU6MQ==",
      "idFromInterface": "1",
    },
    "userNode2": Object {
      "id": "VXNlck5vZGU6MQ==",
    },
    "userNodes": Array [
      Object {
        "id": "VXNlck5vZGU6MTIz",
      },
      Object {
        "id": "VXNlck5vZGU6NDU2",
      },
      Object {
        "id": "VXNlck5vZGU6Nzg5",
      },
    ],
    "userNodes2": Array [
      Object {
        "id": "VXNlck5vZGU6MTIz",
      },
      Object {
        "id": "VXNlck5vZGU6NDU2",
      },
      Object {
        "id": "VXNlck5vZGU6Nzg5",
      },
    ],
    "userWithErrors": Object {
      "__typename": "BaseError",
      "message": "Invalid ID -1",
    },
    "userWithoutError": Object {
      "__typename": "QueryUserWithErrorsSuccess",
      "data": Object {
        "id": "1",
      },
    },
    "users": Array [
      Object {
        "id": "123",
      },
      Object {
        "id": "456",
      },
      Object {
        "id": "789",
      },
    ],
    "usersWithErrors": Object {
      "__typename": "BaseError",
      "message": "Ids required",
    },
    "usersWithoutError": Object {
      "__typename": "QueryUsersWithErrorsSuccess",
      "data": Array [
        Object {
          "id": "1",
        },
        Object {
          "id": "2",
        },
      ],
    },
  },
}
`;
